--- a/index.html
+++ b/index.html
@@ -405,18 +405,21 @@
     }
 
     /* Beach Section */
+    #beach-section-container {
+      position: relative;
+    }
+
     #detail {
       display: none;
       position: absolute;
       z-index: 1;
       width: 348px;
       height: auto;
-      right: calc(330px);
-      /* Posição relativa ao beach-section */
+      right: -35px;
+      /* Posição relativa ao beach-section-container */
     }
 
     #beach-section {
-      position: relative;
       width: 100%;
       height: 1055px;
       background: linear-gradient(to top, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0) 70%),
