--- a/versatil/diamond-section.html
+++ b/versatil/diamond-section.html
@@ -39,7 +39,7 @@
       /* Diamond Section */
       #diamond-section {
         width: 100%;
-        margin: 0 24px 130px 0;
+        margin: 0 0 130px 0;
         padding: var(--gap-custom) 0;
         background: url("https://i.imgur.com/hyVY0T4.png") center no-repeat;
         background-size: 826.43px auto;
